feat: configuracion H2 local, eliminacion Flyway/Postgres